Fix student list alignment issue
- Fix student list header alignment in instructional materials

--- a/public/stylesheets/scss/instructional_materials.scss
+++ b/public/stylesheets/scss/instructional_materials.scss
@@ -75,6 +75,7 @@
 .student_list tr { vertical-align: middle; }
 .student_list td { text-align:left; vertical-align:middle;height:20px;background-color:White;border:solid 1px #ccc;padding:4px}
 .student_list th { text-align:left; vertical-align:middle;font-weight:bold;background-color:#F9EEC1; border:solid 1px #ccc;height:20px;padding:4px }
+.student_list th div.progressbar_container{height:20px;padding-top:0;}
 
 .legend_progress{
   background-color:#FFCC99;
@@ -303,11 +304,8 @@
 #oFullStatusDiv .student_name{white-space:nowrap}
 #oFullStatusDiv .progress_div{width:484px;overflow:auto;text-align:left}
 
-
 div.progressbar_container {height:15px;padding-top:5px;}
-th .progressbar_container {padding-top: 0px;}
 th.expand_collapse_text div.progressbar_container{width:1px;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
-
 
 #oFullStatusDiv .student_list{text-align:left;border:0;margin-top:0px;width:130px}
 #oFullStatusDiv .student_list tr { vertical-align: middle; }
